--- a/adopt-me/.eslintrc.json
+++ b/adopt-me/.eslintrc.json
@@ -1,6 +1,14 @@
 {
-  "extends": ["eslint:recommended", "prettier"],
-  "plugins": [],
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended",
+    "prettier"
+  ],
+  "rules": { "react/prop-types": 0, "react/react-in-jsx-scope": 0 },
+  "plugins": ["react", "jsx-a11y", "import"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
@@ -12,5 +20,15 @@
     "browser": true,
     "node": true,
     "es6": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx"]
+      }
+    }
   }
 }
